fix spacing in exercise list for desktop

--- a/src/css/exercises.css
+++ b/src/css/exercises.css
@@ -23,6 +23,7 @@
   .exercise-list {
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 32px 16px;
   }
 }
 
